@@ -87,6 +87,7 @@ EXTRA_DIST = \
     bug-81.out bug-81.xsl \
     bug-82.out bug-82.xsl \
     bug-83.out bug-83.xsl \
+    bug-84.out bug-84.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
